--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,21 @@
     <!-- Make the Widget.MaterialComponents.Button.TextButton of AlertDialog use the accent color -->
     <style name="AppAlertDialogTheme" parent="Theme.MaterialComponents.DayNight.Dialog">
         <item name="colorPrimary">@color/colorAccent</item>
+        <item name="windowMinWidthMajor">@android:dimen/dialog_min_width_major</item>
+        <item name="windowMinWidthMinor">@android:dimen/dialog_min_width_minor</item>
+    </style>
+
+    <!-- Make the TextInputLayout of AlertDialog use the accent color -->
+    <style name="TextInputLayoutOutlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/colorAccent</item>
+        <item name="hintTextColor">@color/colorAccent</item>
+    </style>
+    <style name="TextInputLayoutOutlinedDropdown" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="boxStrokeColor">@color/colorAccent</item>
+        <item name="hintTextColor">@color/colorAccent</item>
+    </style>
+    <style name="Theme.TextInputLayoutOutlined" parent="">
+        <item name="colorPrimary">@color/colorAccent</item>
     </style>
 
     <!-- White app theme. See values-night-v8 for the dark customizations -->
