Fix Android TV navigation
Fixed views:
- Build info
- Firewall status
- Malware detection status
- Connection payload navigation
- App details

Fixes #295

--- a/app/src/main/res/layout/firewall_status.xml
+++ b/app/src/main/res/layout/firewall_status.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/firewall_status"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -27,6 +28,7 @@
         tools:text="@string/firewall_is_enabled" />
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="30dp"
@@ -37,6 +39,7 @@
         android:columnCount="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants"
         android:useDefaultMargins="true">
 
         <com.google.android.material.card.MaterialCardView
