--- a/app/src/main/res/layout/blacklist_item.xml
+++ b/app/src/main/res/layout/blacklist_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:descendantFocusability="blocksDescendants"
     android:paddingHorizontal="5dp"
     android:paddingVertical="5dp">
 
@@ -20,10 +22,8 @@
         android:textSize="17sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableRight="@drawable/ic_external"
+        app:drawableEndCompat="@drawable/ic_external"
         android:drawablePadding="5dp"
-        android:clickable="true"
-        android:focusable="true"
         tools:text="Blacklist Name" />
 
     <TextView
