--- a/app/src/main/res/layout/scrollable_dialog.xml
+++ b/app/src/main/res/layout/scrollable_dialog.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:padding="8dp"
     android:paddingTop="12dp"
     android:layout_width="match_parent"
@@ -12,5 +10,6 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="false"
         android:textIsSelectable="true" />
 </ScrollView>
