--- a/app/src/main/res/layout/simple_list.xml
+++ b/app/src/main/res/layout/simple_list.xml
@@ -7,6 +7,7 @@
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:descendantFocusability="afterDescendants"
         android:scrollbarStyle="outsideOverlay" />
 
     <TextView
