--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -96,6 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/app_filter_text"
                     android:paddingHorizontal="10dp"
+                    android:layout_marginTop="5dp"
                     android:text="@string/decryption_no_filter_warn"
                     android:textColor="@color/warning"
                     android:textSize="14sp" />
