--- a/app/src/main/res/layout/connection_item.xml
+++ b/app/src/main/res/layout/connection_item.xml
@@ -59,6 +59,15 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/js_injector"
+                    android:layout_width="wrap_content"
+                    android:layout_height="12sp"
+                    android:layout_marginEnd="5dp"
+                    app:tint="@color/colorTabText"
+                    android:contentDescription="@string/injected"
+                    android:src="@drawable/ic_baseline_javascript" />
+
+                <ImageView
                     android:id="@+id/blacklisted"
                     android:layout_width="wrap_content"
                     android:layout_height="12sp"
