Support IPv6 and host names in socks5 mode
Closes #343

--- a/app/src/main/res/xml/socks5_preferences.xml
+++ b/app/src/main/res/xml/socks5_preferences.xml
@@ -11,7 +11,7 @@
 
     <EditTextPreference
         app:key="socks5_proxy_ip_address"
-        app:title="@string/proxy_ip_address"
+        app:title="@string/proxy_host"
         app:defaultValue="0.0.0.0"
         app:iconSpaceReserved="false"
         app:useSimpleSummaryProvider="true" />
