Fix no-filter warning with root decryption
The warning incorrectly referenced the decryption whitelist, which is not
actually applied to the root capture

--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -91,7 +91,7 @@
                     android:layout_centerInParent="true" />
 
                 <TextView
-                    android:id="@+id/app_filter_warning"
+                    android:id="@+id/app_filter_root_decryption_warning"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/app_filter_text"
