--- a/app/src/main/res/layout/quick_settings_item.xml
+++ b/app/src/main/res/layout/quick_settings_item.xml
@@ -17,10 +17,28 @@
         android:layout_marginBottom="2dp"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/description"
-        tools:text="Description"
-        android:drawablePadding="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/icon"
+            android:visibility="gone"
+            android:adjustViewBounds="false"
+            android:layout_width="24dp"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="1dp"
+            android:layout_marginEnd="2dp"
+            tools:src="@drawable/ic_apps"
+            tools:tint="?attr/colorAccent" />
+
+        <TextView
+            android:id="@+id/description"
+            tools:text="Description"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 </LinearLayout>
