Add toggle for auto-reconnection on VPN termination
This allows the user to run other VPN apps, disconnecting PCAPdroid, and
restart it when they terminate.

Closes #411

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -154,6 +154,13 @@
             android:defaultValue="false" />
 
         <SwitchPreference
+            app:key="restart_on_disconnect"
+            android:title="@string/restart_on_disconnection"
+            app:iconSpaceReserved="false"
+            app:summary="@string/restart_on_disconnection_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
             app:key="pcapdroid_trailer"
             app:title="@string/pcapdroid_trailer"
             app:iconSpaceReserved="false"
