--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -53,14 +53,6 @@
             app:defaultValue="true" />
 
         <Preference
-            app:key="dnscrypt_link"
-            app:title="@string/dnscrypt_how_to"
-            app:iconSpaceReserved="false">
-            <intent android:action="android.intent.action.VIEW"
-                android:data="https://emanuele-f.github.io/PCAPdroid/advanced_features#42-doh-support" />
-        </Preference>
-
-        <Preference
             android:key="geolocation"
             app:title="@string/geolocation"
             app:summary="@string/geolocation_summary"
@@ -94,14 +86,12 @@
             app:summary="@string/pcapng_format_summary"
             app:defaultValue="true" />
 
-        <DropDownPreference
-            app:key="block_quic_mode"
+        <SwitchPreference
+            app:key="block_quic"
             app:title="@string/block_quick"
-            android:entries="@array/block_quic_labels"
-            android:entryValues="@array/block_quic"
             app:iconSpaceReserved="false"
-            app:defaultValue="never"
-            app:useSimpleSummaryProvider="true" />
+            app:summary="@string/block_quick_summary"
+            app:defaultValue="false" />
 
         <SwitchPreference
             app:key="full_payload"
@@ -151,13 +141,6 @@
             android:title="@string/start_at_boot"
             app:iconSpaceReserved="false"
             app:summary="@string/start_at_boot_summary"
-            android:defaultValue="false" />
-
-        <SwitchPreference
-            app:key="restart_on_disconnect"
-            android:title="@string/restart_on_disconnection"
-            app:iconSpaceReserved="false"
-            app:summary="@string/restart_on_disconnection_summary"
             android:defaultValue="false" />
 
         <SwitchPreference
@@ -211,13 +194,6 @@
             app:iconSpaceReserved="false"
             app:defaultValue="system"
             app:useSimpleSummaryProvider="true"/>
-
-        <Preference
-            app:key="app_language_external"
-            app:title="@string/app_language"
-            app:isPreferenceVisible="false"
-            app:useSimpleSummaryProvider="true"
-            app:iconSpaceReserved="false" />
 
         <Preference
             app:key="port_mapping"
