Revert with merge

--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -14,19 +14,35 @@
         android:layout_height="wrap_content"
         tools:context="com.emanuelef.remote_capture.activities.MainActivity">
 
-        <TextView
-            android:id="@+id/collector_info"
+        <LinearLayout
+            android:id="@+id/collector_info_layout"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:gravity="center"
-            android:autoLink="web"
-            android:drawablePadding="10dp"
-            tools:text="Collector Info"
-            tools:visibility="gone"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/status_view" />
+            app:layout_constraintTop_toBottomOf="@id/status_view">
+
+            <TextView
+                android:id="@+id/collector_info_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                tools:text="Collector Info" />
+
+            <ImageView
+                android:id="@+id/collector_info_icon"
+                android:adjustViewBounds="false"
+                android:layout_width="24dp"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="1dp"
+                android:layout_marginHorizontal="2dp"
+                tools:src="@drawable/ic_apps"
+                tools:tint="?attr/colorAccent" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/interface_info"
@@ -38,7 +54,7 @@
             tools:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/collector_info" />
+            app:layout_constraintTop_toBottomOf="@id/collector_info_layout" />
 
         <TextView
             android:id="@+id/status_view"
@@ -91,7 +107,7 @@
                     android:layout_centerInParent="true" />
 
                 <TextView
-                    android:id="@+id/app_filter_warning"
+                    android:id="@+id/app_filter_root_decryption_warning"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/app_filter_text"
